--- a/todayPoem/poem/templates/poem/pro1.html
+++ b/todayPoem/poem/templates/poem/pro1.html
@@ -1,72 +1,74 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <html>
 
 <head>
-<meta charset="utf-8">
-<link rel="stylesheet" href="2.css">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="{% static 'poem/2.css' %}?ver=3">
 
-<embed src="be.mp3" loop="infinite" autostart="true"
-hidden="true" >
+    <embed src="{% static 'poem/media/be.mp3' %}" loop="infinite" autostart="true"
+    hidden="true" >
 
-<style>
+    <style>
 
-.text {
-   position: absolute;
-   right: 115px;
-}
+    .text {
+       position: absolute;
+       right: 115px;
+   }
 
-.qwe 
-{
-   text-align: center;
-}
-
-
-@keyframes example1 {
-  0%   { opacity: 0; }
-  10%  { opacity: 0; }
-  20% { opacity: 1; }
-  100% { opacity: 1; }
-}
-@keyframes example2 {
-  0%   { opacity: 0; }
-  20%  { opacity: 0; }
-  30% { opacity: 1; }
-  100% { opacity: 1; }
-}
-@keyframes example3 {
-  0%   { opacity: 0; }
-  30%  { opacity: 0; }
-  40% { opacity: 1; }
-  100% { opacity: 1; }
-}
-@keyframes example4 {
-  0%   { opacity: 0; }
-  40%  { opacity: 0; }
-  50% { opacity: 1; }
-  100% { opacity: 1; }
-}
-@keyframes example5 {
-  0%   { opacity: 0; }
-  50%  { opacity: 0; }
-  60% { opacity: 1; }
-  100% { opacity: 1; }
-}
-@keyframes example6 {
-  0%   { opacity: 0; }
-  60%  { opacity: 0; }
-  70%  { opacity: 1; }
-  100% { opacity: 1; }
-}
-@keyframes example7 {
-  0%   { opacity: 0; }
-  70%  { opacity: 0; }
-  80%  { opacity: 1; }
-  100% { opacity: 1; }
-}
+   .qwe 
+   {
+       text-align: center;
+   }
 
 
-.a1{
+   @keyframes example1 {
+      0%   { opacity: 0; }
+      10%  { opacity: 0; }
+      20% { opacity: 1; }
+      100% { opacity: 1; }
+  }
+  @keyframes example2 {
+      0%   { opacity: 0; }
+      20%  { opacity: 0; }
+      30% { opacity: 1; }
+      100% { opacity: 1; }
+  }
+  @keyframes example3 {
+      0%   { opacity: 0; }
+      30%  { opacity: 0; }
+      40% { opacity: 1; }
+      100% { opacity: 1; }
+  }
+  @keyframes example4 {
+      0%   { opacity: 0; }
+      40%  { opacity: 0; }
+      50% { opacity: 1; }
+      100% { opacity: 1; }
+  }
+  @keyframes example5 {
+      0%   { opacity: 0; }
+      50%  { opacity: 0; }
+      60% { opacity: 1; }
+      100% { opacity: 1; }
+  }
+  @keyframes example6 {
+      0%   { opacity: 0; }
+      60%  { opacity: 0; }
+      70%  { opacity: 1; }
+      100% { opacity: 1; }
+  }
+  @keyframes example7 {
+      0%   { opacity: 0; }
+      70%  { opacity: 0; }
+      80%  { opacity: 1; }
+      100% { opacity: 1; }
+  }
+
+
+  .a1{
     -webkit-animation-name: example1;
     -webkit-animation-duration: 15s;
     animation-name: example1;
@@ -79,7 +81,7 @@ hidden="true" >
 }
 .a3{
     -webkit-animation-name: example3; 
-     -webkit-animation-duration: 15s;
+    -webkit-animation-duration: 15s;
     animation-name: example3;
 }
 .a4{
@@ -108,34 +110,31 @@ hidden="true" >
 
 <body>
 
+    <div STYLE="writing-mode: tb-rl">
+        <div class="text" style="opacity: 0.60; font-size: 4.5rem; position: absolute; text-align: top;">
+            <div class="qwe">
 
+                <div class="a1">저 달을 봐</div><br>
 
-<div STYLE="writing-mode: tb-rl">
-   <div class="text" style="opacity: 0.19; font-size: 4.5rem; position: absolute; text-align: top;">
-   <div class="qwe">
-   
-   <div class="a1">저 달을 봐</div><br>
+                <div class="a2">평생을 지구만 쫒아다녀</div><br>
 
-   <div class="a2">평생을 지구만 쫒아다녀</div><br>
+                <div class="a3">달을 보며 난 가끔 생각해</div><br>
 
-   <div class="a3">달을 보며 난 가끔 생각해</div><br>
+                <div class="a4">너와</div><br>
 
-   <div class="a4">너와</div><br>
+                <div class="a5">나</div><br>
 
-   <div class="a5">나</div><br>
+                <div class="a6">그리고</div><br>
 
-   <div class="a6">그리고</div><br>
+                <div class="a7">찬란했던 우리</div><br>
 
-   <div class="a7">찬란했던 우리</div><br>
-
-   </div>
-</div>
-</div>
-</div>
+            </div>
+        </div>
+    </div>
 
 <video autoplay loop muted class="video_selector">
-   <source src="1.mp4" type="video/mp4">
-</video>
+   <source src="{% static 'poem/media/1.mp4' %}" type="video/mp4">
+   </video>
 
 </body>
 </html>
