--- a/todayPoem/poem/static/poem/2.css
+++ b/todayPoem/poem/static/poem/2.css
@@ -1,19 +1,12 @@
 div {
 	font-family: vardhana;
-<<<<<<< HEAD
-	font-size:5rem;
-	font-weight: 900;
-	color:white;
-	text-align: center;
-	margin-top: 100px;
-
-=======
 	font-size:1.5rem;
-	font-weight: 100;
+	font-weight: 300;
 	color:white;
 	text-align: center;
-	margin-top: 100px;
->>>>>>> parent of f336fb1... update
+	margin-top: 10px;
+	margin-bottom:100px;
+	text-shadow: 0px 0px 5px white;
 }
 
 .video_selector {
@@ -23,7 +16,7 @@ div {
 	min-width: 100%;
 	min-height: 100%;
 	width: auto;  
-	height: auto;
+	height: 125%;
 	z-index: -999;
 
 }
@@ -35,11 +28,11 @@ body
 /* 스마트폰 (가로용) ----------- */
 @media only screen
 and (min-width : 321px) {
-/* Styles */
+	/* Styles */
 }
- 
+
 /*스마트폰 (세로용) ----------- */
 @media only screen
 and (max-width : 320px) {
-/* Styles */
+	/* Styles */
 }
