--- a/todayPoem/poem/templates/poem/pro1.html
+++ b/todayPoem/poem/templates/poem/pro1.html
@@ -1,78 +1,14 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <html>
 
 <head>
-<<<<<<< HEAD
-<meta charset="utf-8">
-<link rel="stylesheet" href="2.css">
-
-<embed src="be.mp3" loop="infinite" autostart="true"
-hidden="true" >
-
-<style>
-
-.text {
-   position: absolute;
-   right: 115px;
-}
-
-.qwe 
-{
-   text-align: center;
-}
-
-
-@keyframes example1 {
-  0%   { opacity: 0; }
-  10%  { opacity: 0; }
-  20% { opacity: 1; }
-  100% { opacity: 1; }
-}
-@keyframes example2 {
-  0%   { opacity: 0; }
-  20%  { opacity: 0; }
-  30% { opacity: 1; }
-  100% { opacity: 1; }
-}
-@keyframes example3 {
-  0%   { opacity: 0; }
-  30%  { opacity: 0; }
-  40% { opacity: 1; }
-  100% { opacity: 1; }
-}
-@keyframes example4 {
-  0%   { opacity: 0; }
-  40%  { opacity: 0; }
-  50% { opacity: 1; }
-  100% { opacity: 1; }
-}
-@keyframes example5 {
-  0%   { opacity: 0; }
-  50%  { opacity: 0; }
-  60% { opacity: 1; }
-  100% { opacity: 1; }
-}
-@keyframes example6 {
-  0%   { opacity: 0; }
-  60%  { opacity: 0; }
-  70%  { opacity: 1; }
-  100% { opacity: 1; }
-}
-@keyframes example7 {
-  0%   { opacity: 0; }
-  70%  { opacity: 0; }
-  80%  { opacity: 1; }
-  100% { opacity: 1; }
-}
-
-
-.a1{
-=======
     <meta charset="utf-8">
-    <link rel="stylesheet" href="{% static 'poem/2.css' %}?ver=3">
+    <link rel="stylesheet" href="{% static 'poem/2.css' %}?ver=6">
 
-    <embed src="{% static 'poem/media/be.mp3' %}" loop="infinite" autostart="true"
+    <embed src="{% static 'poem/media/be.mp3' %}" loop="true" autostart="true"
     hidden="true" >
 
     <style>
@@ -133,7 +69,6 @@ hidden="true" >
 
 
   .a1{
->>>>>>> parent of f336fb1... update
     -webkit-animation-name: example1;
     -webkit-animation-duration: 15s;
     animation-name: example1;
@@ -146,7 +81,7 @@ hidden="true" >
 }
 .a3{
     -webkit-animation-name: example3; 
-     -webkit-animation-duration: 15s;
+    -webkit-animation-duration: 15s;
     animation-name: example3;
 }
 .a4{
@@ -175,49 +110,31 @@ hidden="true" >
 
 <body>
 
-<<<<<<< HEAD
-=======
     <div STYLE="writing-mode: tb-rl">
-        <div class="text" style="opacity: 0.60; font-size: 4.5rem; position: absolute; text-align: top;">
+        <div class="text" style="opacity: 0.9; font-size: 4.5rem; position: absolute; text-align: top;">
             <div class="qwe">
->>>>>>> parent of f336fb1... update
 
+                <div class="a1">저 달을 봐</div><br>
 
-<<<<<<< HEAD
-<div STYLE="writing-mode: tb-rl">
-   <div class="text" style="opacity: 0.19; font-size: 4.5rem; position: absolute; text-align: top;">
-   <div class="qwe">
-   
-   <div class="a1">저 달을 봐</div><br>
+                <div class="a2">평생을 지구만 쫓아다녀</div><br>
 
-   <div class="a2">평생을 지구만 쫒아다녀</div><br>
-=======
-                <div class="a2">평생을 지구만 쫒아다녀</div><br>
->>>>>>> parent of f336fb1... update
+                <div class="a3">달을 보며 난 가끔 생각해</div><br>
 
-   <div class="a3">달을 보며 난 가끔 생각해</div><br>
+                <div class="a4">너와</div><br>
 
-   <div class="a4">너와</div><br>
+                <div class="a5">나</div><br>
 
-   <div class="a5">나</div><br>
+                <div class="a6">그리고</div><br>
 
-   <div class="a6">그리고</div><br>
+                <div class="a7">찬란했던 우리</div><br>
 
-   <div class="a7">찬란했던 우리</div><br>
-
-   </div>
-</div>
-</div>
-</div>
+            </div>
+        </div>
+    </div>
 
 <video autoplay loop muted class="video_selector">
-<<<<<<< HEAD
-   <source src="1.mp4" type="video/mp4">
-</video>
-=======
-   <source src="{% static 'poem/media/1.mp4' %}" type="video/mp4">
+   <source src="{% static 'poem/media/2.mp4' %}" type="video/mp4">
    </video>
->>>>>>> parent of f336fb1... update
 
 </body>
 </html>
