css link update

--- a/todayPoem/poem/templates/poem/pro1.html
+++ b/todayPoem/poem/templates/poem/pro1.html
@@ -6,7 +6,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="{% static 'poem/2.css' %}?ver=6">
+    <link rel="stylesheet" type="text/css" href="{% static 'poem/2.css' %}?ver=6">
 
     <embed src="{% static 'poem/media/be.mp3' %}" loop="true" autostart="true"
     hidden="true" >
