--- a/todayPoem/poem/templates/poem/pro.html
+++ b/todayPoem/poem/templates/poem/pro.html
@@ -6,7 +6,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="{% static 'poem/1.css' %}?ver=5">
+    <link rel="stylesheet" type="text/css" href="{% static 'poem/1.css' %}?ver=5">
     <style type="text/css">
 
         .k {
